# hn-parser

./: .gitignore  Cargo.toml  Justfile  README.md  config.example.json  config.example.toml  config.test.json  config.toml  package.json  schema.sql  tailwind.config.js
.github/workflows/: release.yml
debian/: hnparser.service
src/: app_error.rs  config.rs  database.rs  fixture.rs  highlighter.rs  hn_client.rs  job.rs  keyword.rs  mailer.rs  mailer_task.rs  main.rs  non_empty_vec.rs  poll.rs  post.rs  schema.rs  scraper.rs  scraper_task.rs  state.rs  state_task.rs  template.rs  templates.rs  ui.rs  views.rs  web.rs
src/liquid/: mod.rs  timeago.rs
src/mailer/: gmail.rs  mod.rs
templates/: email.html  index.css  index.html
views/: email.html  email.html.liquid  index.css  index.html  index.html.liquid
