[package]
edition = "2021"
name = "hnparser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.24"
futures = "0.3"
lettre = {version = "0.10.4", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "tokio1-rustls-tls"]}
liquid = "0.26.1"
liquid-core = "0.26.1"
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", features = ["sqlite", "runtime-tokio-rustls"]}
timeago = "0.4.1"
tokio = {version = "1.0", features = ["full"]}
