[package]
edition = "2021"
license = "MIT"
name = "hnparser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7.3"
chrono = "0.4"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport",
  "hostname",
  "builder",
  "tokio1-native-tls",
] }
askama = "0.12"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
timeago = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.deb]
assets = [
  [
    "target/release/hnparser",
    "usr/bin/hnparser",
    "755",
  ],
  [
    "config.example.json",
    "etc/hnparser.example.json",
    "644",
  ],
  [
    "debian/hnparser.service",
    "lib/systemd/system/hnparser.service",
    "644",
  ],
]
copyright = "2023, Ilya Bylich."
depends = "$auto, systemd"
extended-description = "HN parser"
maintainer = "HN parser developer <ibylich@gmail.com>"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"
